TODO
* Add support for Unicode Normalization Form Canonical Decomposition (NFD)
* Add container data handle? Add decryption support and use it to read container key bag?
* rename volume data handle to container data handle?
* add snapshot support

library:
* improve file content read support
** encrypted file content read support - detect block identifier mismatch
** compressed file content read support?
* change container read bootstap as advised in documentation
** validate checksum
** read backup container superblocks
* expose directory entry added time
* refactor libfsapfs_encryption_aes_key_unwrap to use encryption context?
* Create libfsapfs_container_superblock_get_identifier
* Create libfsapfs_volume_superblock_get_identifier

Python bindings:
* add extents object
* add support for posix time in nano seconds

Tools:
* fsapfsinfo tool
** add volume selection via GUID in path
** do not print name of root file entry
** prompt user for password or recovery password when needed
** print extended attribute values
* fsapfsmount tool
** add owner and group identifier support?
** add extended attributes support

Tests:
* test with copy of mounted file system
* add tests for container_key_bag
* add tests for volume_key_bag
* add tests for key_encrypted_key

20180907
* see `git log' for more recent change log
* Initial version based on libfsrefs and libfsntfs
